crates/core/tests/ui/typed_query/fail/authored_unsupported_declared_type.stderr
error[E0425]: cannot find value `timestamptz` in module `::babar::codec`
  --> tests/ui/typed_query/fail/authored_unsupported_declared_type.rs:1:1
   |
 1 | / babar::schema! {
 2 | |     mod app_schema {
 3 | |         table public.users {
 4 | |             id: primary_key(int4),
...  |
 8 | | }
   | |_^ not found in `::babar::codec`
...
11 |       let _query = app_schema::typed_query!(SELECT users.deleted_at FROM users);
   |                    ------------------------------------------------------------ in this macro invocation
   |
note: found an item that was configured out
  --> src/codec/mod.rs
   |
   | #[cfg(feature = "time")]
   |       ---------------- the item is gated behind the `time` feature
   | pub use time::{
   |     date, time, timestamp, timestamptz, DateCodec, OffsetDateTimeCodec, PrimitiveDateTimeCodec,
   |                            ^^^^^^^^^^^
   = note: this error originates in the macro `::babar::query` which comes from the expansion of the macro `app_schema::typed_query` (in Nightly builds, run with -Z macro-backtrace for more info)
